--- a/config.yml
+++ b/config.yml
@@ -10,7 +10,7 @@ grpc:
   timeout: 15 # Seconds
   maxConnectionAge: 5 # Minutes
 
-gateway:
+rest:
   host: 0.0.0.0
   port: 8080
 
@@ -32,13 +32,13 @@ database:
   user: postgres
   password: postgres
   name: ocp_template_api
-  sslMode: disable
+  sslmode: disable
   driver: pgx
 
 kafka:
+  capacity: 512
   topic: "ocp-template-events"
+  groupId: "ocp-template-api"
   brokers:
     - "kafka:9092"
     - "localhost:9094"
-  capacity: 512
-  groupId: "ocp-template-api"
