--- a/config.yml
+++ b/config.yml
@@ -19,12 +19,9 @@ metrics:
   port: 9100
   path: /metrics
 
-status:
-  host: 0.0.0.0
-  port: 8000
-  livenessPath: /live
-  readinessPath: /ready
-  versionPath: /version
+jaeger:
+  host: "jaeger"
+  port: ":6831"
 
 database:
   host: database
