--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -7,15 +7,56 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  deploy:
+    name: Build
     runs-on: ubuntu-latest
+    env:
+      IMAGE_NAME: docker.pkg.github.com/${{ github.repository }}
+      COMMIT_HASH: ${{ github.sha }}
+
     steps:
       - name: Set env version
         run: echo "VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+
+      - name: Login to GitHub Packages
+        env:
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          docker login docker.pkg.github.com -u $GITHUB_ACTOR -p $TOKEN
+
       - uses: actions/checkout@v2
+
+      - name: Pull latest images
+        run: |
+          docker pull $IMAGE_NAME/builder:latest || true
+          docker pull $IMAGE_NAME/grpc-server:latest || true
+
       - name: Build a Docker image
         run: |
-          docker build . \
+          DOCKER_BUILDKIT=1 && docker build \
+            --target builder \
             --build-arg VERSION=$VERSION \
             --build-arg COMMIT_HASH=$COMMIT_HASH \
-            --tag image:$(date +%s)
+            --cache-from $IMAGE_NAME/builder:latest \
+            -t $IMAGE_NAME/builder \
+            .
+
+          DOCKER_BUILDKIT=1 && docker build \
+            --target server \
+            --build-arg VERSION=$VERSION \
+            --build-arg COMMIT_HASH=$COMMIT_HASH \
+            --cache-from $IMAGE_NAME/builder:latest \
+            --cache-from $IMAGE_NAME/grpc-server:latest \
+            -t $IMAGE_NAME/grpc-server:$VERSION \
+            -t $IMAGE_NAME/grpc-server:latest \
+            .
+
+      - name: Push image to GitHub Packages
+        run: |
+          docker push $IMAGE_NAME/builder:latest
+          docker push $IMAGE_NAME/grpc-server:latest
+          docker push $IMAGE_NAME/grpc-server:$VERSION
+
+      - name: Logout
+        run: |
+          docker logout docker.pkg.github.com
