--- a/config.yml
+++ b/config.yml
@@ -33,8 +33,8 @@ status:
 database:
   host: postgres
   port: 5432
-  user: postgres
-  password: postgres
+  user: docker
+  password: docker
   name: ocp_template_api
   sslmode: disable
   driver: pgx
