--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,6 +34,11 @@ services:
 
   postgres:
     image: postgres:latest
+    healthcheck:
+      test: [ "CMD", "pg_isready", "-q", "-d", "postgres", "-U", "postgres" ]
+      timeout: 45s
+      interval: 10s
+      retries: 10
     restart: always
     logging:
       driver: 'gelf'
@@ -46,10 +51,13 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: ocp_template_api
+      APP_DB_USER: docker
+      APP_DB_PASS: docker
     networks:
       - ocpnw
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      # - pgdata:/var/lib/postgresql/data
+      - ./scripts/init-database.sh:/docker-entrypoint-initdb.d/init-database.sh
 
   zookeeper:
     image: confluentinc/cp-zookeeper
@@ -154,7 +162,7 @@ services:
     ports:
       - 3000:3000
     links:
-      - prometheus:prometheus
+      - prometheus
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=MYPASSWORT
       - GF_USERS_ALLOW_SIGN_UP=false
@@ -163,10 +171,8 @@ services:
     volumes:
       - "./data/grafana:/var/lib/grafana"
 
-
-  # Elasticsearch: https://www.elastic.co/guide/en/elasticsearch/reference/6.x/docker.html
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.10
+    image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.2
     environment:
       - http.host=0.0.0.0
       - transport.host=localhost
@@ -184,9 +190,10 @@ services:
       - ocpnw
     volumes:
       - esdata:/usr/share/elasticsearch/data
+  # Elasticsearch: https://www.elastic.co/guide/en/elasticsearch/reference/6.x/docker.html
 
-  mongodb:
-    image: mongo:4.1
+  mongo:
+    image: mongo:4.2
     restart: always
     networks:
       - ocpnw
@@ -195,20 +202,21 @@ services:
 
   # Graylog: https://hub.docker.com/r/graylog/graylog/
   graylog:
-    image: graylog/graylog:3.3
+    image: graylog/graylog:4.0
     environment:
       # CHANGE ME (must be at least 16 characters)!
       - GRAYLOG_PASSWORD_SECRET=somepasswordpepper
       # Password: admin
       - GRAYLOG_ROOT_PASSWORD_SHA2=8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
-      - GRAYLOG_HTTP_EXTERNAL_URI=http://localhost:9000/
+      - GRAYLOG_HTTP_EXTERNAL_URI=http://127.0.0.1:9000/
+    entrypoint: /usr/bin/tini -- wait-for-it elasticsearch:9200 --  /docker-entrypoint.sh
     networks:
       - ocpnw
     links:
-      - mongodb:mongo
+      - mongo
       - elasticsearch
     depends_on:
-      - mongodb
+      - mongo
       - elasticsearch
     ports:
       # Graylog web interface and REST API
