--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
       - 8082:8082 # gRPC
       - 9100:9100 # Metrics prometheus
       - 8000:8000 # Status prometheus
+      - 40000:40000 # Debug port
     # healthcheck:
     #   test: ['CMD', 'curl', '-f', 'http://localhost:8000/live']
     #   interval: 1m
