--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -1,62 +1,45 @@
 name: image
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  release:
+    types: [published]
 
 jobs:
-  deploy:
-    name: Build
+  push_to_registries:
+    name: Push Docker image to multiple registries
     runs-on: ubuntu-latest
-    env:
-      IMAGE_NAME: docker.pkg.github.com/${{ github.repository }}
-      COMMIT_HASH: ${{ github.sha }}
-
+    permissions:
+      packages: write
+      contents: read
     steps:
-      - name: Set env version
-        run: echo "VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: Check out the repo
+        uses: actions/checkout@v2
 
-      - name: Login to GitHub Packages
-        env:
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          docker login docker.pkg.github.com -u $GITHUB_ACTOR -p $TOKEN
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - uses: actions/checkout@v2
+      - name: Log in to the Container registry
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Pull latest images
-        run: |
-          docker pull $IMAGE_NAME/builder:latest || true
-          docker pull $IMAGE_NAME/grpc-server:latest || true
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: |
+            my-docker-hub-namespace/my-docker-hub-repository
+            ghcr.io/${{ github.repository }}
 
-      - name: Build a Docker image
-        run: |
-          DOCKER_BUILDKIT=1 && docker build \
-            --target builder \
-            --build-arg VERSION=$VERSION \
-            --build-arg COMMIT_HASH=$COMMIT_HASH \
-            --cache-from $IMAGE_NAME/builder:latest \
-            -t $IMAGE_NAME/builder \
-            .
-
-          DOCKER_BUILDKIT=1 && docker build \
-            --target server \
-            --build-arg VERSION=$VERSION \
-            --build-arg COMMIT_HASH=$COMMIT_HASH \
-            --cache-from $IMAGE_NAME/builder:latest \
-            --cache-from $IMAGE_NAME/grpc-server:latest \
-            -t $IMAGE_NAME/grpc-server:$VERSION \
-            -t $IMAGE_NAME/grpc-server:latest \
-            .
-
-      - name: Push image to GitHub Packages
-        run: |
-          docker push $IMAGE_NAME/builder:latest
-          docker push $IMAGE_NAME/grpc-server:latest
-          docker push $IMAGE_NAME/grpc-server:$VERSION
-
-      - name: Logout
-        run: |
-          docker logout docker.pkg.github.com
+      - name: Build and push Docker images
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
