--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -15,30 +15,33 @@ jobs:
       COMMIT_HASH: ${{ github.sha }}
 
     steps:
-      - name: Set env version
-        run: echo "VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - run: echo ::set-env name=IMAGE_TAG::${GITHUB_REF:10}
 
-      - name: Login to GitHub Packages
-        env:
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          docker login docker.pkg.github.com -u $GITHUB_ACTOR -p $TOKEN
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: all
 
-      - uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      - name: Build a Docker image
-        run: |
-          DOCKER_BUILDKIT=1 && docker build \
-            --build-arg VERSION=$VERSION \
-            --build-arg COMMIT_HASH=$COMMIT_HASH \
-            -t $IMAGE_NAME/grpc-server:$VERSION \
-            -t $IMAGE_NAME/grpc-server:latest \
-            .
+      - name: Login to Registry
+        uses: docker/login-action@v1
+        with:
+          # registry: docker.pkg.github.com
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }}
 
-      - name: Push image to GitHub Packages
-        run: |
-          docker push $IMAGE_NAME/grpc-server:$VERSION
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: ${{ runner.os }}-buildx-
 
-      - name: Logout
-        run: |
-          docker logout docker.pkg.github.com
+      - uses: docker/build-push-action@v2
+        with:
+          push: true
+          # tags: <org-name>/<repo-name>/<app-name>:${{ env.IMAGE_TAG }}
+          tags: ghcr.io/${{ github.repository_owner }}/<image-name>:${{ env.IMAGE_TAG }}
