--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -14,8 +14,9 @@ jobs:
       IMAGE_NAME: docker.pkg.github.com/${{ github.repository }}
       COMMIT_HASH: ${{ github.sha }}
 
-    steps:
-      - run: echo ::set-env name=IMAGE_TAG::${GITHUB_REF:10}
+    steps:      
+      - name: Set env version
+        run: echo "IMAGE_TAG=${GITHUB_REF:10}" >> $GITHUB_ENV
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
