--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -13,6 +13,7 @@ jobs:
     env:
       IMAGE_NAME: docker.pkg.github.com/${{ github.repository }}
       COMMIT_HASH: ${{ github.sha }}
+    environment: default
 
     steps:      
       - name: Set env version
