--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:      
       - name: Set env version
-        run: echo "IMAGE_TAG=${GITHUB_REF:10}" >> $GITHUB_ENV
+        run: echo "IMAGE_TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -46,4 +46,4 @@ jobs:
         with:
           push: true
           # tags: <org-name>/<repo-name>/<app-name>:${{ env.IMAGE_TAG }}
-          tags: ghcr.io/${{ github.repository_owner }}/<image-name>:${{ env.IMAGE_TAG }}
+          tags: ghcr.io/${{ github.repository_owner }}/server:${{ env.IMAGE_TAG }}
