--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -46,4 +46,4 @@ jobs:
         with:
           push: true
           # tags: <org-name>/<repo-name>/<app-name>:${{ env.IMAGE_TAG }}
-          tags: ghcr.io/${{ github.repository_owner }}/server:${{ env.IMAGE_TAG }}
+          tags: ghcr.io/${{ github.repository_owner }}/ocp-template-api/server:${{ env.IMAGE_TAG }}
